# DNA-Secure

./: README.md  package.json  pnpm-lock.yaml  turbo.json
app/: page.tsx
apps/api/: main.py  pyproject.toml  requirements.txt
apps/api/core/: __init__.py  chaos_map.py  dna_encoder.py  metrics.py  roi_detector.py  stream_cipher.py
apps/api/routes/: __init__.py  decrypt.py  encrypt.py
apps/fe/: next.config.ts  package.json  tsconfig.json
apps/fe/app/: globals.css  layout.tsx  page.tsx
apps/fe/app/decrypt/: page.tsx
apps/fe/app/encrypt/: page.tsx
apps/fe/app/history/: page.tsx
apps/fe/app/pipeline/: page.tsx
apps/fe/app/system/: page.tsx
apps/fe/components/: site-footer.tsx  site-nav.tsx
apps/fe/lib/: api.ts  env.ts
apps/web/: next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analysis/: page.tsx
apps/web/app/decrypt/result/: page.tsx
apps/web/app/decrypt/upload/: page.tsx
apps/web/app/encrypt/configure/: page.tsx
apps/web/app/encrypt/processing/: page.tsx
apps/web/app/encrypt/result/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/encrypt/: drop-zone.tsx  image-diff-viewer.tsx  live-log.tsx  pipeline-progress.tsx  rule-selector.tsx
apps/web/components/layout/: footer.tsx  navbar.tsx
apps/web/components/shared/: metric-card.tsx  status-badge.tsx  step-progress.tsx
apps/web/lib/: api.ts  store.ts
components/shared/: metric-card.tsx  status-badge.tsx
(+1 files in other folders)
